Added some test entries to bib

--- a/MiKTeX/bibliography_database.bib
+++ b/MiKTeX/bibliography_database.bib
@@ -47,5 +47,25 @@
   language = {russian}
 }
 
+@MISC{cite_webpage,
+  title = {How can I use BibTeX to cite a web page? [Электронный ресурс]},
+  howpublished = {Электронные данные},
+  note = {Режим доступа: http://tex.stackexchange.com/questions/3587/how-can-i-use-bibtex-to-cite-a-web-page},
+  owner = {mstyura},
+  timestamp = {2013.02.20},
+  language = {english}
+}
 
+@BOOK{microproc_1988,
+  title = {Микропроцессоры и микропроцессорные комплекты интегральных микросхем. В 2 т.},
+  publisher = {Радио и связь},
+  year = {1988.},
+  editor = {В. А. Шахнова},
+  volume = {1},
+  pages = {368},
+  address = {М.},
+  owner = {mstyura},
+  timestamp = {2013.02.20},
+  language = {russian}
+}
 
