--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -163,5 +163,6 @@
 \makeatother
 
 % Зачем: Задает стиль библиографии
+% Почему: Пункт 2.8.6 Требований по оформлению пояснительной записки.
 \bibliographystyle{styles/belarus-specific-utf8gost780u}
 
