Updated example document. Added examples of tables, equations and figures.

--- a/MiKTeX/bibliography_database.bib
+++ b/MiKTeX/bibliography_database.bib
@@ -2,14 +2,14 @@
 % Encoding: utf8
 
 @BOOK{guk_1999,
-  title = {Процессоры  Pentium  II,  Pentium  Pro  и просто  Pentium},
+  title = {Процессоры Pentium II, Pentium Pro и просто Pentium},
   publisher = {Питер Ком},
   year = {1999},
   author = {М. Гук},
   pages = {288},
+  language = {russian},
   owner = {mstyura},
-  timestamp = {2013.02.20},
-  language = {russian}
+  timestamp = {2013.02.20}
 }
 
 @BOOK{kluev_1989,
@@ -17,12 +17,12 @@
   publisher = {Машиностроение},
   year = {1989},
   author = {В.В. Клюев1 and В.В. Клюев2 and В.В. Клюев3 and В.В. Клюев4 and В.В.
-  Клюев5},
+	Клюев5},
   pages = {672},
   address = {М.},
+  language = {russian},
   owner = {mstyura},
-  timestamp = {2013.02.20},
-  language = {russian}
+  timestamp = {2013.02.20}
 }
 
 @BOOK{kulezin_2004,
@@ -32,9 +32,21 @@
   author = {М. О. Кузелин and Д. А. Кнышев and В. Ю. Зотов},
   pages = {440},
   address = {М.},
+  language = {russian},
   owner = {mstyura},
-  timestamp = {2013.02.20},
-  language = {russian}
+  timestamp = {2013.02.20}
+}
+
+@BOOK{kulinovich_2010,
+  title = {Основы  научного  цитирования : метод.  пособие  для  студентов 
+	и магистрантов,  обучающихся  по  спец.  1"---23 01 04  <<Психология>>},
+  publisher = {БГУ},
+  year = {2010},
+  author = {Т. О. Кулинкович},
+  pages = {58},
+  owner = {mstyura},
+  timestamp = {2013.03.19},
+  language = {russian},
 }
 
 @BOOK{Morozov_2011,
@@ -42,30 +54,31 @@
   publisher = {ЯрГУ им. П.Г. Демидова},
   year = {2011},
   author = {Д.К. Морозов and А.Я. Пархоменко},
+  language = {russian},
   owner = {mstyura},
-  timestamp = {2013.02.20},
-  language = {russian}
-}
-
-@MISC{cite_webpage,
-  title = {How can I use BibTeX to cite a web page? [Электронный ресурс]},
-  howpublished = {Электронные данные},
-  note = {Режим доступа: http://tex.stackexchange.com/questions/3587/how-can-i-use-bibtex-to-cite-a-web-page},
-  owner = {mstyura},
-  timestamp = {2013.02.20},
-  language = {english}
+  timestamp = {2013.02.20}
 }
 
 @BOOK{microproc_1988,
-  title = {Микропроцессоры и микропроцессорные комплекты интегральных микросхем. В 2 т.},
+  title = {Микропроцессоры и микропроцессорные комплекты интегральных микросхем.
+	В 2 т.},
   publisher = {Радио и связь},
   year = {1988.},
   editor = {В. А. Шахнова},
   volume = {1},
   pages = {368},
   address = {М.},
+  language = {russian},
   owner = {mstyura},
-  timestamp = {2013.02.20},
-  language = {russian}
+  timestamp = {2013.02.20}
+}
+
+@MISC{cite_webpage,
+  title = {How can I use BibTeX to cite a web page? [Электронный ресурс]},
+  howpublished = {Электронные данные},
+  note = {Режим доступа: http://tex.stackexchange.com/questions/3587/how-can-i-use-bibtex-to-cite-a-web-page},
+  language = {english},
+  owner = {mstyura},
+  timestamp = {2013.02.20}
 }
 
