--- a/MiKTeX/document_content.tex
+++ b/MiKTeX/document_content.tex
@@ -1,3 +1,4 @@
+\newcommand{\byr}{Br}
 
 \section{Требования к пояснительной записке}
 
@@ -22,7 +23,7 @@
 Абзацы в тексте начинают отступом, равным 15\,--\,17 мм при выполнении  записи  рукописным  способом  или  пяти  знакам  при  применении  печатающего устройства вывода ЭВМ.
 
 \subsubsection{} 
-Все  части  пояснительной  записки  необходимо  излагать  только  на одном языке --- на русском или белорусском, или на одном из иностранных языков, например английском или немецком.
+Все  части  пояснительной  записки  необходимо  излагать  только  на одном языке "--- на русском или белорусском, или на одном из иностранных языков, например английском или немецком.
 
 \subsubsection{} 
 Описки и графические неточности, обнаруженные в тексте пояснительной записки, выполненной рукописным способом, допускается исправлять подчисткой, закрашиванием белой краской и нанесением на том же месте исправленного текста. Помарки и следы не полностью удаленного прежнего текста не допускаются.
@@ -34,10 +35,10 @@
 \subsection{Рубрикации, заголовки и содержание}
 
 \subsubsection{} 
-Текст пояснительной записки разделяют на логически сопряженные части --- разделы, а при необходимости и подразделы. Как разделы, так и подразделы могут состоять из одного или нескольких пунктов.
+Текст пояснительной записки разделяют на логически сопряженные части "--- разделы, а при необходимости и подразделы. Как разделы, так и подразделы могут состоять из одного или нескольких пунктов.
 
 \subsubsection{}
-Разделы должны иметь порядковые  номера,  обозначаемые арабски-ми цифрами без точки  в конце  и записанные с абзацного отступа. Подразделы 
+Разделы должны быть пронумерованы арабскими цифрами без точки  в конце  и записанные с абзацного отступа. Подразделы 
 нумеруют в пределах раздела, к которому они относятся.
 
 \subsubsection{}
@@ -56,58 +57,145 @@
 \subsubsection{}
 Каждый раздел пояснительной записки рекомендуется начинать с новой страницы. 
 
-Между заголовком раздела (подраздела) и текстом оставляют пробельную строку --- при компьютерном способе выполнения  записки;  интервал  шириной 15\,мм --- при рукописном способе (см.~приложение Л).
+Между заголовком раздела (подраздела) и текстом оставляют пробельную строку "--- при компьютерном способе выполнения  записки;  интервал  шириной 15\,мм "--- при рукописном способе (см.~приложение Л).
 
 Между заголовками разделов и входящих в него подразделов допускается помещать небольшой вводный текст, предваряющий подраздел.
 
 \subsubsection{}
-Перечень всех разделов и подразделов, включающий порядковые номера и заголовки, оформляют в виде содержания --- обязательного элемента пояснительной записки. Содержание помещают непосредственно за заданием на проектирование и включают в общую нумерацию страниц.
+Перечень всех разделов и подразделов, включающий порядковые номера и заголовки, оформляют в виде содержания "--- обязательного элемента пояснительной записки. Содержание помещают непосредственно за заданием на проектирование и включают в общую нумерацию страниц.
 
-Слово \MakeUppercase{содержание} записывают прописными буквами полужирным шрифтом 14~---~16 пунктов и располагают по центру строки. Между словом \MakeUppercase{содержание} и самим содержанием оставляют промежуток, равный пробельной строке. В содержании заголовки выравнивают, соподчиняя по разделам, подразделам и пунктам (если последние имеют заголовки), смещая вертикали вправо относительно друг друга на 2 знака.
+Слово \MakeUppercase{содержание} записывают прописными буквами полужирным шрифтом 14 "--- 16 пунктов и располагают по центру строки. Между словом \MakeUppercase{содержание} и самим содержанием оставляют промежуток, равный пробельной строке. В содержании заголовки выравнивают, соподчиняя по разделам, подразделам и пунктам (если последние имеют заголовки), смещая вертикали вправо относительно друг друга на 2 знака.
 
 % Пример организации пустых разделов
 \section*{Введение}
 \label{sec:intro}
-\addcontentsline{toc}{section}{Введение} \newpage
+\addcontentsline{toc}{section}{Введение}
+Разделы начинаются с новой страницы автоматически. Подразделы и подподразделы "--- нет.
 
-\section{Анализ нескорректированной системы управления} \newpage
+
+\section{Анализ нескорректированной системы управления}
 \label{sec:analysys_equations}
+Пример того, как оформить рисунок, смотри на рисунке~\ref{fig:fire_alarms}
+\begin{figure}[ht]
+\centering
+  \begin{subfigure}[b]{0.45\textwidth} 
+    \centering
+    \includegraphics[scale=0.85]{avt_pozh_izv.jpg}  
+    \caption{}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.45\textwidth} 
+    \centering
+    \includegraphics[scale=1.2]{ruch_pozh_izv.jpg}  
+    \caption{}
+  \end{subfigure}
+  \caption{ а  "--- автономный пожарный извещатель;
+            б  "--- ручной пожарный извещатель.}
+  \label{fig:fire_alarms}
+\end{figure}
 
-\subsection{Анализ исходных данных} \newpage 
+
+\subsection{Анализ исходных данных} 
 \label{sec:analysys_data}
+Смотри как выглядит таблица~\ref{table:econ:function_sizes}, она является примером оформления таблиц. Ее расположение выбирается подпибается автоматичеки для лучшей заполняемости страниц.
+\begin{table}[ht]
+\caption{Перечень и объем функций программного модуля}
+\label{table:econ:function_sizes}
+\centering
+  \begin{tabular}{| >{\centering}m{0.12\textwidth} 
+                  | >{\raggedright}m{0.40\textwidth} 
+                  | >{\centering}m{0.18\textwidth} 
+                  | >{\centering\arraybackslash}m{0.18\textwidth}|}
 
-\subsection{Статические и динамические характеристики элементов системы} \newpage 
+  \hline
+         \multirow{2}{0.12\textwidth}[-0.5em]{\centering \No{} функции}
+       & \multirow{2}{0.40\textwidth}[-0.55em]{\centering Наименование (содержание)} 
+       & \multicolumn{2}{c|}{\centering Объем функции, LoC} \tabularnewline
+  
+  \cline{3-4} & 
+       & { по каталогу ($ V_{i} $) }
+       & { уточненный ($ V_{i}^{\text{у}} $) } \tabularnewline
+  
+  \hline 
+  101 & Организация ввода информации & \num{100} & \num{60} \tabularnewline
+  
+  \hline
+  102 & Контроль, предварительная обработка и ввод информации & \num{520} & \num{520} \tabularnewline
+
+  \hline
+  111 & Управление вводом/выводом & \num{2700} & \num{700} \tabularnewline
+
+  \hline
+  304 & Обслуживание файлов & \num{520} & \num{580} \tabularnewline
+
+  \hline
+  305 & Обработка файлов & \num{750} & \num{750} \tabularnewline
+
+  \hline
+  309 & Формирование файла & \num{1100} & \num{1100} \tabularnewline
+
+  \hline
+  506 & Обработка ошибочных и сбойных ситуаций & \num{430} & \num{430} \tabularnewline
+
+  \hline
+  507 & Обеспечение интерфейса между компонентами & \num{730} & \num{730} \tabularnewline
+
+  \hline
+  605 & Вспомогательные и сервисные программы & \num{460} & \num{280} \tabularnewline 
+
+  \hline
+  701 & Математическая статистика и прогнозирование & \num{8370} & \num{3500} \tabularnewline
+
+  \hline
+
+  Итог & & {\num{1000000}} & {\num{10000}} \tabularnewline
+
+  \hline
+
+  \end{tabular}
+\end{table}
+
+
+
+\subsection{Статические и динамические характеристики элементов системы} 
 \label{sec:stat_and_dyn}
+Пример оформления формул~\footnote{подпись к формуле <<где ..>> является дичайшим хаком, пофиксить способ добавления описаний планируется в дальнейшем...}
+\begin{equation}
+  \label{eq:econ:total_salary}
+  \text{З}_{\text{о}} = \sum^{n}_{i = 1} 
+                        \text{Т}_{\text{ч}}^{i} \cdot
+                        \text{Т}_{\text{ч}} \cdot
+                        \text{Ф}_{\text{п}} \cdot
+                        \text{К}
+                          \text{\,,}
+\end{equation}
+\par
+\begin{tabular}{@{}ll@{ "--- }p{0.74\textwidth}}
+где & $ \text{Т}_{\text{ч}}^{i} $ & часовая тарифная ставка \mbox{$ i $-го} исполнителя, \byr$/$час; \\
+    & $ \text{Т}_{\text{ч}} $ & количество часов работы в день, час; \\
+    & $ \text{Ф}_{\text{п}} $ & плановый фонд рабочего времени \mbox{$ i $-го} исполнителя, дн.; \\
+    & $ \text{К} $ & коэффициент премирования. \\[\parsep]
+\end{tabular}
 
-\subsection{Структурная схема нескорректированной системы} \newpage 
+
+\subsection{Структурная схема нескорректированной системы} 
 \label{sec:str_schema}
+Правила оформления цитирования смотри в методичке~\cite{kulinovich_2010}. 
 
-\subsection{Определение желаемого коэффициента усиления разомкнутой системы} \newpage 
+\subsection{Определение желаемого коэффициента усиления разомкнутой системы} 
 \label{sec:determ_factor}
 
-\subsection{Анализ устойчивости} \newpage 
+\subsection{Анализ устойчивости} 
 \label{sec:analysys_rob}
 
-\subsection{Выводы} \newpage 
+\subsection{Выводы} 
 \label{sec:conclusion}
 
-\subsubsection{Пункт подраздела, не должен появится в содержании} \newpage
+\subsubsection{Пункт подраздела, не должен появится в содержании}
 
-\section{Синтез корректирующих устройств} \newpage
+\section{Синтез корректирующих устройств}
+Для того, чтобы содержание выглядело посолиднее.
 
 \section*{Приложение А (информационное)  Пример заполнения титульного листа} 
-\addcontentsline{toc}{section}{Приложение А (информационное)  Пример заполнения титульного листа} \newpage
-
-\cite{Morozov_2011}
-
-\cite[книженция]{kulezin_2004}
-
-\cite[книженция]{kulezin_2004}
-
-\cite{guk_1999}
-
-\cite{kluev_1989}
-
-\cite{cite_webpage}
-
-\cite{microproc_1988}
+\addcontentsline{toc}{section}{Приложение А (информационное)  Пример заполнения титульного листа} 
+Правильное оформление приложений (с точки зрения \TeX{}) еще не сделано, т.\,к. пока не нужно было. 
+Для демострации~\cite{Morozov_2011} построения списка~\cite[книженция]{kulezin_2004} литературы~\cite{guk_1999} цитирую различные~\cite{kluev_1989} книги и веб"=страницы~\cite{cite_webpage}
