Added examples of enumerations.

--- a/MiKTeX/document_content.tex
+++ b/MiKTeX/document_content.tex
@@ -183,9 +183,59 @@
 
 \subsection{Определение желаемого коэффициента усиления разомкнутой системы} 
 \label{sec:determ_factor}
+Простые перечни выглядят вот так. 
+Оценка стоимости создания ПО со стороны разработчика предполагает составление сметы затрат, которая включает следующие статьи расходов:
+\begin{itemize}
+
+  \item заработную плату исполнителей, основную ($ \text{З}_{\text{o}} $) и дополнительную ($\text{З}_{\text{д}} $);
+
+  \item отчисления в фонд социальной защиты населения ($ \text{З}_\text{сз} $);
+
+  \item налоги от фонда оплаты труда ($ \text{Н}_\text{е} $);
+
+  \item материалы и комплектующие ($ \text{М} $);
+
+  \item спецоборудование ($ \text{Р}_\text{с} $);
+
+  \item машинное время ($ \text{Р}_\text{м} $);
+
+  \item расходны на научные командировки ($ \text{Р}_\text{нк} $);
+
+  \item прочие прямые расходы ($ \text{П}_\text{з} $);
+
+  \item накладные расходы ($ \text{Р}_\text{н} $);
+
+  \item расходы на сопровождение и адаптацию ($ \text{Р}_\text{са} $).
+
+\end{itemize}
 
 \subsection{Анализ устойчивости} 
 \label{sec:analysys_rob}
+Именованные перечни вот так. 
+Оценка стоимости создания ПО со стороны разработчика предполагает составление сметы затрат, которая включает следующие статьи расходов:
+\begin{enumerate}
+
+  \item заработную плату исполнителей, основную ($ \text{З}_{\text{o}} $) и дополнительную ($\text{З}_{\text{д}} $);
+
+  \item отчисления в фонд социальной защиты населения ($ \text{З}_\text{сз} $);
+
+  \item налоги от фонда оплаты труда ($ \text{Н}_\text{е} $);
+
+  \item материалы и комплектующие ($ \text{М} $);
+
+  \item спецоборудование ($ \text{Р}_\text{с} $);
+
+  \item машинное время ($ \text{Р}_\text{м} $);
+
+  \item расходны на научные командировки ($ \text{Р}_\text{нк} $);
+
+  \item прочие прямые расходы ($ \text{П}_\text{з} $);
+
+  \item накладные расходы ($ \text{Р}_\text{н} $);
+
+  \item расходы на сопровождение и адаптацию ($ \text{Р}_\text{са} $).
+
+\end{enumerate}
 
 \subsection{Выводы} 
 \label{sec:conclusion}
