Fixed enumeration display, simplified counters configuration, added listings support & example.

--- a/MiKTeX/document_content.tex
+++ b/MiKTeX/document_content.tex
@@ -245,6 +245,17 @@
 \section{Синтез корректирующих устройств}
 Для того, чтобы содержание выглядело посолиднее.
 
+\section{Пример листинга} 
+\label{sec:listing_example}
+\begin{lstlisting}[style=fsharpstyle,caption={Пример автоматического вывода типа функции}]
+> let add a b = a + b;;
+val add : int -> int -> int
+> add 3 5;;
+val it : int = 8
+\end{lstlisting}
+
+
+
 \section*{Приложение А (информационное)  Пример заполнения титульного листа} 
 \addcontentsline{toc}{section}{Приложение А (информационное)  Пример заполнения титульного листа} 
 Правильное оформление приложений (с точки зрения \TeX{}) еще не сделано, т.\,к. пока не нужно было. 
