Fixed \emph style

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -330,4 +330,4 @@
 % Зачем: Нумерация листингов в пределах секции
 \AtBeginDocument{\numberwithin{lstlisting}{section}}
 
-\usepackage{ulem}
+\usepackage[normalem]{ulem}
