Issue #1: Введение и Заключение оформляются в соотвествии с требованиями стандарта.

--- a/MiKTeX/document_content.tex
+++ b/MiKTeX/document_content.tex
@@ -67,11 +67,21 @@
 Слово \MakeUppercase{содержание} записывают прописными буквами полужирным шрифтом 14 "--- 16 пунктов и располагают по центру строки. Между словом \MakeUppercase{содержание} и самим содержанием оставляют промежуток, равный пробельной строке. В содержании заголовки выравнивают, соподчиняя по разделам, подразделам и пунктам (если последние имеют заголовки), смещая вертикали вправо относительно друг друга на 2 знака.
 
 % Пример организации пустых разделов
-\section*{Введение}
+\sectioncentered*{Введение}
 \label{sec:intro}
 \addcontentsline{toc}{section}{Введение}
-Разделы начинаются с новой страницы автоматически. Подразделы и подподразделы "--- нет.
+Введение (предисловие) помещают на отдельной странице. 
+Слово ВВЕДЕНИЕ (ПРЕДИСЛОВИЕ) записывают прописными буквами по центру.
+Введение (предисловие) должно быть кратким и четким, не должно быть общих мест и отступлений, непосредственно не связанных с разрабатываемой темой.
+Объем введения не должен превышать двух страниц.
 
+Рекомендуется следующее содержание введения (предисловия):
+\begin{itemize}
+  \item краткий анализ достижений в той области, которой посвящена тема дипломного проекта (работы);
+  \item цель дипломного проектирования;
+  \item принципы, положенные в основу проектирования, научного исследования, поиска технического решения;
+  \item краткое изложение содержания разделов пояснительной записки с обязательным указанием задач, решению которых они посвящены.
+\end{itemize}
 
 \section{Анализ нескорректированной системы управления}
 \label{sec:analysys_equations}
@@ -253,6 +263,17 @@ val add : int -> int -> int
 > add 3 5;;
 val it : int = 8
 \end{lstlisting}
+
+\sectioncentered*{Заключение}
+\addcontentsline{toc}{section}{Заключение}
+Заключение пишут на отдельной странице. Слово ЗАКЛЮЧЕНИЕ записывают прописными буквами полужирным шрифтом по центру строки.
+В заключении необходимо перечислить основные результаты, характеризующие степень достижения целей проекта и подытоживающие его содержание.
+
+Результаты следует излагать в форме констатации фактов, используя слова: <<изучены>>, <<исследованы>>, <<сформулированы>>, <<показано>>, <<разработана>>, <<предложена>>, <<подготовлены>>, <<изготовлена>>, <<испытана>> и т. п.
+
+Текст перечислений должен быть кратким, ясным и содержать конкретные данные.
+
+Объем заключения не должен занимать более полутора–двух страниц пояснительной записки.
 
 
 
