--- a/MiKTeX/table_of_contents.tex
+++ b/MiKTeX/table_of_contents.tex
@@ -1,6 +1,6 @@
 % Зачем: Содержание пишется полужирным шрифтом, по центру всеми заглавными буквами
 % Почему: Пункт 2.2.7 Требований по оформлению пояснительной записки.
-\renewcommand \contentsname {\centerline{\mdseries\large{\MakeUppercase{содержание}}}}
+\renewcommand \contentsname {\centerline{\bfseries\large{\MakeUppercase{содержание}}}}
 
 % Зачем: Не захламлять основной файл
 % Примечание: \small\selectfont злостный хак, чтобы уменьшить размер шрифта в ToC 
