Issue #2: Список литературы добавляется в содержание

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -170,7 +170,8 @@
     {\z@}%
     {-1em \@plus -1ex \@minus -.2ex}%
     {1em \@plus .2ex}%
-    {\centering\hyphenpenalty=10000\normalfont\large\bfseries\MakeUppercase}}
+    {\centering\hyphenpenalty=10000\normalfont\large\bfseries\MakeUppercase}%
+    }
 \makeatother
 
 
@@ -345,3 +346,5 @@
 \usepackage[normalem]{ulem}
 
 \usepackage[final,hidelinks]{hyperref}
+
+\usepackage[square,numbers,sort&compress]{natbib}
