Исправлены опечатки в листе задания. Обновлен мейк файл. Обновлена преамбула.

--- a/MiKTeX/diploma_task.tex
+++ b/MiKTeX/diploma_task.tex
@@ -137,7 +137,7 @@
 
   \vspace{1em}
 
-  Задание приянл к исполненияю \hfill{} \uline{\hspace*{4em}} / И.\,О.~Фамилия /
+  Задание принял к исполнению \hfill{} \uline{\hspace*{4em}} / И.\,О.~Фамилия /
 
   \restoregeometry
 }
