--- a/MiKTeX/diploma_title.tex
+++ b/MiKTeX/diploma_title.tex
@@ -36,7 +36,7 @@
       \hspace*{3ex}\emph{от кафедры информатики} & И.\,О.~Фамилия \\
       \hspace*{3ex}\emph{по экономической части} & И.\,О.~Фамилия \\
       \hspace*{3ex}\emph{по охране труда} & И.\,О.~Фамилия \\
-      Нормоконтроллер: & И.\,О.~Фамилия \\
+      Нормоконтроллёр: & И.\,О.~Фамилия \\
       & \\
       Рецензент: &
     \end{tabular}
