Issue #3: Добавил заготовки для Реферата, Аннотации, Рецензии, Отзыва.

--- a/MiKTeX/main_example.tex
+++ b/MiKTeX/main_example.tex
@@ -2,7 +2,15 @@
 
 \begin{document}
 
-\input{practice_title}
+\input{diploma_title} 
+
+\input{review}
+
+\input{feedback}
+
+\input{annotation}
+
+\input{abstract}
 
 \setcounter{page}{2}
 
