--- a/MiKTeX/table_of_contents.tex
+++ b/MiKTeX/table_of_contents.tex
@@ -5,7 +5,7 @@
 % Зачем: Не захламлять основной файл
 % Примечание: \small\selectfont злостный хак, чтобы уменьшить размер шрифта в ToC 
 {
-\small\selectfont
+\normalsize\selectfont
 \tableofcontents
 \newpage
 }
