Issue #5: Добавлен пример оформления длинных таблиц.

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -387,3 +387,5 @@
 \pretocmd{\section}{\addtocounter{tottables}{\value{table}}\setcounter{table}{0}}{}{}
 \pretocmd{\section}{\addtocounter{totequation}{\value{equation}}\setcounter{equation}{0}}{}{}
 \pretocmd{\bibitem}{\addtocounter{totreferences}{1}}{}{}
+
+\usepackage{longtable}
