Added document list example.

--- a/MiKTeX/main_example.tex
+++ b/MiKTeX/main_example.tex
@@ -20,4 +20,7 @@
 
 \input{references}
 
+% Ведомость документов, сделана в Visio, сохранена в pdf. Является последней страницей пояснительной записки.
+\includepdf[pages={-}]{documents_list.pdf}
+
 \end{document}
