--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -388,4 +388,8 @@
 \pretocmd{\section}{\addtocounter{totequation}{\value{equation}}\setcounter{equation}{0}}{}{}
 \pretocmd{\bibitem}{\addtocounter{totreferences}{1}}{}{}
 
+% Для оформления таблиц не влязящих на 1 страницу
 \usepackage{longtable}
+
+% Для включения pdf документов в результирующий файл
+\usepackage[final]{pdfpages}
