--- a/MiKTeX/bibliography_database.bib
+++ b/MiKTeX/bibliography_database.bib
@@ -7,6 +7,7 @@
   year = {1999},
   author = {М. Гук},
   pages = {288},
+  address = {СПб.},
   language = {russian},
   owner = {mstyura},
   timestamp = {2013.02.20}
@@ -38,15 +39,16 @@
 }
 
 @BOOK{kulinovich_2010,
-  title = {Основы  научного  цитирования : метод.  пособие  для  студентов 
-	и магистрантов,  обучающихся  по  спец.  1"---23 01 04  <<Психология>>},
+  title = {Основы научного цитирования : метод. пособие для студентов и магистрантов,
+	обучающихся по спец. 1"---23 01 04 <<Психология>>},
   publisher = {БГУ},
   year = {2010},
   author = {Т. О. Кулинкович},
   pages = {58},
-  owner = {mstyura},
-  timestamp = {2013.03.19},
+  address = {Минск},
   language = {russian},
+  owner = {mstyura},
+  timestamp = {2013.03.19}
 }
 
 @BOOK{Morozov_2011,
@@ -54,6 +56,7 @@
   publisher = {ЯрГУ им. П.Г. Демидова},
   year = {2011},
   author = {Д.К. Морозов and А.Я. Пархоменко},
+  address = {Ярославль},
   language = {russian},
   owner = {mstyura},
   timestamp = {2013.02.20}
